# poke-engine

./: .gitignore  Cargo.toml
analysis/plan-i/: fix-2-5-completion-log.md
docs/superpowers/plans/: 2026-04-30-aegislash-stance-change-fix.md  2026-04-30-death-aware-switch-priority.md  2026-04-30-nn-encode-volatile-and-last-used-move.md  2026-04-30-priority-aware-damage.md  2026-04-30-survivability-aware-switch.md
scripts/: replay_plan_i_evidence.py
src/: eval_kind.rs  heuristic_prior.rs  lib.rs  mcts.rs  nn_client.rs  nn_state_encoder.rs  state.rs  translate.rs  tuning.rs
src/genx/: abilities.rs  base_stats.rs  damage_calc.rs  evaluate.rs  generate_instructions.rs  items.rs  state.rs
tests/: test_aegislash_stance_change.rs  test_battle_mechanics.rs  test_bug3_catalog_replay.rs  test_death_aware_switch_priority.rs  test_fakeout_legality.rs  test_hazard_filter.rs  test_heuristic_prior.rs  test_nn_client.rs  test_nn_mcts_integration.rs  test_nn_state_encoder_extensions.rs  test_priority_aware_damage.rs  test_puct.rs  test_state_encoder.rs  test_survivability_switch.rs  test_tera_ban.rs
tests/fixtures/: iron_crown_t5.json  iron_crown_t5_garchomp_side1.json
tests/fixtures/replay/: gelks_T11.json  voltaris33_T11.json  voltaris33_T20.json
