[package]
name = "poke-engine"
version = "0.0.46"
authors = ["pmariglia <pmariglia@github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Pokemon battle engine that can be used to search through the state space of a Pokemon battle."

[lib]
name = "poke_engine"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "poke-engine"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
rand = "0.9.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
mockito = "1"

[features]
remove_low_chance_instructions = []
gen1 = []
gen2 = []
gen3 = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []
gen9 = []
terastallization = ["gen9"]

default = []

[workspace]
members = [
    "poke-engine-py"
]
